--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,6 +14,11 @@
         <link rel="stylesheet" href="{% static 'fontawesome/css/font-awesome.min.css' %}">
         <link rel='stylesheet' type="text/css" href="{% static 'blog/style.css' %}" />
 
+        <meta property="og:url"           content="http://www.your-domain.com/your-page.html" />
+        <meta property="og:type"          content="website" />
+        <meta property="og:title"         content="Your Website Title" />
+        <meta property="og:description"   content="Your description" />
+
     </head>
 
     <body>
