--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -19,6 +19,20 @@
                     {% else %}
                             <a class="btn" href="https://facebook.com/sharer/sharer.php?u='google.com'" >share
                             </a>
+                        <div id="fb-root"></div>
+                          <script>(function(d, s, id) {
+                            var js, fjs = d.getElementsByTagName(s)[0];
+                            if (d.getElementById(id)) return;
+                            js = d.createElement(s); js.id = id;
+                            js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1";
+                            fjs.parentNode.insertBefore(js, fjs);
+                          }(document, 'script', 'facebook-jssdk'));</script>
+
+                          <!-- Your share button code -->
+                          <div class="fb-share-button"
+                            data-href="http://www.your-domain.com/your-page.html"
+                            data-layout="button_count">
+                          </div>
                     {% endif %}
                     <br><br>
                 </div>
