test share button

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,6 +1,14 @@
 {% extends 'blog/base.html' %}
 <div class="container-fluid">
     {% block body %}
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.10&appId=292294567910076";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
         <br><br>
     {% if object_list %}
 
@@ -19,20 +27,7 @@
                     {% else %}
                             <a class="btn" href="https://facebook.com/sharer/sharer.php?u='google.com'" >share
                             </a>
-                        <div id="fb-root"></div>
-                          <script>(function(d, s, id) {
-                            var js, fjs = d.getElementsByTagName(s)[0];
-                            if (d.getElementById(id)) return;
-                            js = d.createElement(s); js.id = id;
-                            js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1";
-                            fjs.parentNode.insertBefore(js, fjs);
-                          }(document, 'script', 'facebook-jssdk'));</script>
-
-                          <!-- Your share button code -->
-                          <div class="fb-share-button"
-                            data-href="http://www.your-domain.com/your-page.html"
-                            data-layout="button_count">
-                          </div>
+                        <div class="fb-share-button" data-href="https://teqitez.herokuapp.com" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fteqitez.herokuapp.com%2F&amp;src=sdkpreparse">Share</a></div>
                     {% endif %}
                     <br><br>
                 </div>
