--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -27,7 +27,7 @@
                     {% else %}
                             <a class="btn" href="https://facebook.com/sharer/sharer.php?u='google.com'" >share
                             </a>
-                        <div class="fb-share-button" data-href="https://teqitez.herokuapp.com" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fteqitez.herokuapp.com%2F&amp;src=sdkpreparse">Share</a></div>
+                        <div class="fb-share-button" data-href="https://teqitez.herokuapp.com/blog" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fteqitez.herokuapp.com/blog%2F&amp;src=sdkpreparse">Share</a></div>
                     {% endif %}
                     <br><br>
                 </div>
