--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -27,7 +27,7 @@
                         <a class="btn btn-dark" href="{% url 'blog:post-delete' posts.id %}">delete</a>
                         <a class="btn btn-light" href="{% url 'blog:post-update' posts.id %}">edit</a>
                     {% else %}
-                        <a class="twitter-share-button"
+                        <a class="twitter-share-button btn fa fa-twitter-square"
                             href="https://twitter.com/intent/tweet?text=Hello%20world"
                             data-size="large">
                             Tweet</a>
