--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -47,12 +47,11 @@
                         <a class="btn btn-dark" href="{% url 'blog:post-delete' posts.id %}">delete</a>
                         <a class="btn btn-light" href="{% url 'blog:post-update' posts.id %}">edit</a>
                     {% else %}
-                        <div class="twitter-share-button">
-                            <a class="btn fa fa-twitter-square"
-                            href="https://twitter.com/intent/tweet?text=Hello%20world"
-                            data-size="large">
-                            Tweet</a>
-                        </div>
+
+                        <a class="twitter-share-button btn fa fa-twitter-square"
+                           href="https://twitter.com/intent/tweet?text=Hello%20world"
+                           data-size="large">Tweet</a>
+
 
                         <div class="fb-share-button" data-href="https://teqitez.herokuapp.com/blog" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fteqitez.herokuapp.com/blog%2F&amp;src=sdkpreparse">Share</a></div>
                     {% endif %}
