--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -1,4 +1,4 @@
 body {
-    background: white url("images/bg.png");
+    background: white url("images/bg.png") no-repeat;
     font-family: 'Ubuntu', cursive;
 }
