--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -36,4 +36,5 @@
         {% block body %}
         {% endblock %}
     </body>
+    <footer>Copyright &copy; Tuan Doan, all rights served</footer>
 </html>
