--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <title> teqitez </title>
         {% load staticfiles %}
-        <!-- this bootstrap version 3.3.6 is old, the new one is 4... I use 3.6.3 to compatibilize with the instruction -->
+
         <link rel="stylesheet" href="{% static 'blog/bootstrap.min.css' %}">
         <script src="{% static 'blog/jquery-3.2.1.slim.min.js' %}"></script>
         <script src="{% static 'blog/bootstrap.min.js' %}"></script>
@@ -18,6 +18,9 @@
         <meta property="og:type"          content="website" />
         <meta property="og:title"         content="Your Website Title" />
         <meta property="og:description"   content="Your description" />
+
+        <link rel="shortcut icon" type="image/png" href="{% static 'blog/images/favicon.png'%}"/>
+        <link rel="shortcut icon" type="image/png" href="http://eg.com/favicon.png"/>
 
     </head>
 
