--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -1,4 +1,6 @@
 body {
-    background: white url("images/bg.png") no-repeat;
+    background: white url("images/bg.png") no-repeat fixed ;
+    width: 1200px;
+    height: 100%;
     font-family: 'Ubuntu', cursive;
 }
