--- a/blog/templates/blog/landing.html
+++ b/blog/templates/blog/landing.html
@@ -1,5 +1,5 @@
 {% extends 'blog/base.html' %}
-
-<h1>welcome to my blog</h1>
-<a href="{% url 'blog:index' %}">blog</a>
-
+{% block body %}
+    <h1>welcome to my blog</h1>
+    <a href="{% url 'blog:index' %}">blog</a>
+{% endblock %}
