add images, change sth in the view and form

--- a/blog/templates/blog/blogpost_form.html
+++ b/blog/templates/blog/blogpost_form.html
@@ -5,7 +5,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12 col-md-7">
-            <div class="panel-body">
+            <div class="panel-body bg-white align-self-center">
                 
                 <form class="form-horizontal" action="" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
