--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -6,7 +6,7 @@
     <div class="container">
         <h1 class="bg-dark text-light">{{ blogpost.post_title}}</h1>
         <div class="bg-white">
-            <img src="{{ blogpost.feature_image.url }}">
+            <img src="{{ blogpost.feature_image.url }}" class="img-fluid">
             <p class="text-dark">{{ blogpost.content }}</p>
         </div>
     </div>
