--- a/blog/templates/blog/landing.html
+++ b/blog/templates/blog/landing.html
@@ -1,5 +1,5 @@
 {% extends 'blog/base.html' %}
 {% block body %}
-    <h1>welcome to my blog</h1>
-    <a href="{% url 'blog:index' %}">blog</a>
+    <h1 class="text-light text-center align-self-center">Welcome to teqitez</h1>
+    <a href="{% url 'blog:index' %}" class="btn btn-primary">blog</a>
 {% endblock %}
