--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -2,3 +2,7 @@ body {
     background: white url("images/01_bg.png") no-repeat fixed center ;
     font-family: 'Ubuntu', cursive;
 }
+
+footer {
+    display: block;
+}
