--- a/blog/templates/blog/landing.html
+++ b/blog/templates/blog/landing.html
@@ -19,7 +19,7 @@
     </head>
 
     <body>
-        <div class="align-middle text-center landingtext" >
+        <div class=" text-center landingtext" >
             <h1 class="text-light text-center align-self-center">Welcome to teqitez</h1>
             <a href="{% url 'blog:index' %}" class="btn btn-primary">visit blog</a>
         </div>
