--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -47,13 +47,13 @@
                         <a class="btn btn-dark" href="{% url 'blog:post-delete' posts.id %}">delete</a>
                         <a class="btn btn-light" href="{% url 'blog:post-update' posts.id %}">edit</a>
                     {% else %}
+                        <div class="d-inline">
+                            <a class="twitter-share-button" data-size="large" href="https://teqitez.herokuapp.com/blog">Tweet</a>
+                        </div>
 
-                        <a class="twitter-share-button" data-size="large" href="https://teqitez.herokuapp.com/blog">Tweet</a>
-
-                        <!--<div class="fb-share-button" data-href="https://teqitez.herokuapp.com/blog" data-layout="button_count" data-size="large" data-mobile-iframe="true">-->
-                        <a class="fb-share-button fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fteqitez.herokuapp.com/blog%2F&amp;src=sdkpreparse"
-                           data-href="https://teqitez.herokuapp.com/blog" data-layout="button_count" data-size="large" data-mobile-iframe="true">Share</a>
-
+                        <div class="fb-share-button d-inline" data-href="https://teqitez.herokuapp.com/blog" data-layout="button_count" data-size="large" data-mobile-iframe="true">-->
+                            <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fteqitez.herokuapp.com/blog%2F&amp;src=sdkpreparse">Share</a>
+                        </div>
 
                     {% endif %}
                     <br><br>
