--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -50,11 +50,11 @@
                         <div class="d-inline">
                             <a class="twitter-share-button" data-size="large" href="https://teqitez.herokuapp.com/blog">Tweet</a>
                         </div>
-
-                        <div class="fb-share-button d-inline" data-href="https://teqitez.herokuapp.com/blog" data-layout="button_count" data-size="large" data-mobile-iframe="true">-->
-                            <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fteqitez.herokuapp.com/blog%2F&amp;src=sdkpreparse">Share</a>
+                        <div class="d-inline">
+                            <div class="fb-share-button" data-href="https://teqitez.herokuapp.com/blog" data-layout="button_count" data-size="large" data-mobile-iframe="true">-->
+                                <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fteqitez.herokuapp.com/blog%2F&amp;src=sdkpreparse">Share</a>
+                            </div>
                         </div>
-
                     {% endif %}
                     <br><br>
                 </div>
