--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -8,7 +8,10 @@
         <div class="bg-white">
             <img src="{{ blogpost.feature_image.url }}" class="img-fluid">
             <p class="text-dark">{{ blogpost.content }}</p>
+
         </div>
+        <br>
+        <div class="fb-comments" data-href="https://teqitez.herokuapp.com/blog/1" data-numposts="5"></div>
     </div>
 
 {% endblock %}
