--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -4,14 +4,14 @@
 {% block body %}
     <br><br>
     <div class="container">
-        <h1 class="bg-dark text-light">{{ blogpost.post_title}}</h1>
+        <h1 class="text-light">{{ blogpost.post_title}}</h1>
         <div class="bg-white">
             <img src="{{ blogpost.feature_image.url }}" class="img-fluid">
             <p class="text-dark">{{ blogpost.content }}</p>
-
+            <div class="fb-comments" data-href="{% url 'blog:detail' blogpost.id %}" data-numposts="5"></div>
         </div>
         <br>
-        <div class="fb-comments" data-href="https://teqitez.herokuapp.com/blog/1" data-numposts="5"></div>
+
     </div>
 
 {% endblock %}
