--- a/blog/templates/blog/login.html
+++ b/blog/templates/blog/login.html
@@ -7,7 +7,7 @@
 
     <div class="row">
         <div class="col-sm-12 col-md-6">
-            <div class="panel panel-default">
+            <div class="panel panel-default bg-white">
                 <div class="panel-body">
                     <h3>Log In</h3>
                     {% if error_message %}
