--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -4,7 +4,13 @@ body {
 }
 
 footer {
-    display: block;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    text: white;
+    text-align: center;
 }
 
 .landingtext {
