--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -86,5 +86,5 @@
         {% block body %}
         {% endblock %}
     </body>
-    <footer>Copyright &copy; Tuan Doan, all rights served</footer>
+    <footer class="text-light">Copyright &copy; Tuan Doan, all rights served</footer>
 </html>
