--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -14,7 +14,7 @@
     </div>
 
     <hr>
-    <a class="btn btn-default" href="{% url 'blog:add_comment_to_post' pk=post.id %}">Add comment</a>
+    <a class="btn btn-default" href="#">Add comment</a>
     {% for comment in post.comments.all %}
         {% if user.is_authenticated or comment.approved_comment %}
             <div class="comment">
