--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -1,5 +1,6 @@
 body {
     background: white url("images/01_bg.png") no-repeat fixed center ;
+    background-size: 1920px 1080px;
     font-family: 'Ubuntu', cursive;
 }
 
