fix some crazy bugs

--- a/blog/templates/blog/add_comment_to_post.html
+++ b/blog/templates/blog/add_comment_to_post.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html' %}
 
-{% block content %}
+{% block body %}
     <div class="bg-white text-dark text-center">
         <h1>New comment</h1>
         <form method="POST" class="post-form">{% csrf_token %}
