--- a/blog/templates/blog/landing.html
+++ b/blog/templates/blog/landing.html
@@ -25,6 +25,6 @@
         </div>
 
     </body>
-    <footer>Copyright &copy; Tuan Doan, all rights served</footer>
+    <footer class="fixed-bottom">Copyright &copy; Tuan Doan, all rights served</footer>
 </html>
 
