--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -9,7 +9,7 @@
             <p class="text-dark">{{ blogpost.content }}</p>
             <hr>
                 <a class="btn btn-primary" href="{% url 'blog:add_comment_to_post' pk=blogpost.pk %}">Add comment</a>
-                {% for comment in post.comments.all %}
+                {% for comment in blogpost.comments.all %}
                     {% if user.is_authenticated or comment.approved_comment %}
                         <div class="comment">
                             <div class="date">
