--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -15,11 +15,11 @@
                             <div class="date">
                                 {{ comment.created_date }}
                                 {% if not comment.approved_comment %}
-                                    <a class="btn btn-default" href="{% url 'blog:comment_remove' pk=comment.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
-                                    <a class="btn btn-default" href="{% url 'blog:comment_approve' pk=comment.pk %}"><span class="glyphicon glyphicon-ok"></span></a>
+                                    <a class="btn btn-default" href="{% url 'blog:comment_remove' pk=comment.pk %}"><span class="glyphicon glyphicon-remove">rm</span></a>
+                                    <a class="btn btn-default" href="{% url 'blog:comment_approve' pk=comment.pk %}"><span class="glyphicon glyphicon-ok">ok</span></a>
                                 {% endif %}
                             </div>
-                            <strong>{{ comment.author }}</strong>
+                            <span class="text-info">{{ comment.author }}</span>
                             <p>{{ comment.text|linebreaks }}</p>
                         </div>
                     {% endif %}
