--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -4,12 +4,8 @@ body {
     font-family: 'Ubuntu', cursive;
 }
 
-footer {
+#footer {
     position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    padding: 1rem;
     text-align: center;
 }
 
