--- a/blog/templates/blog/landing.html
+++ b/blog/templates/blog/landing.html
@@ -20,11 +20,11 @@
 
     <body>
         <div class=" text-center landingtext" >
-            <h1 class="text-light text-center align-self-center">Welcome to teqitez</h1>
+            <h1 class="text-light text-center align-self-center">Welcome to teqitez</h1><br>
             <a href="{% url 'blog:index' %}" class="btn btn-primary">visit blog</a>
         </div>
 
     </body>
-    <footer class="fixed-bottom text-light">Copyright &copy; Tuan Doan, all rights served</footer>
+    <footer class="fixed-bottom text-light footer" id="footer" >Copyright &copy; Tuan Doan, all rights served</footer>
 </html>
 
