--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -21,6 +21,21 @@
                         <div class="d-inline">
                             <a class="twitter-share-button" data-size="large" href="https://teqitez.herokuapp.com/blog">Tweet</a>
                         </div>
+
+                        {% with "shere this" as share_txt %}
+                        {% with "https://teqitez.herokuapp.com/" as host %}
+                            {% with "blog/1/" as page_url%}
+                                {% with "title" as title %}
+                                    {% with "twitter" as service %}
+                                        <a href="http://twitter.com/share?url={{ host }}{{ page_url }}&amp;text={{ title }}" target="_blank" title="{{ share_txt }} {{ service }}">
+                                            <img src="http://carlosvin.alwaysdate.net/templates/img/tw.png" alt="{{ share_txt }} {{ service }}"/>
+                                        </a>
+                                    {% endwith%}
+                                {% endwith%}
+                            {% endwith%}
+                        {% endwith%}
+                        {% endwith%}
+
                         <div class="d-inline">
                             <div class="fb-share-button" data-href="https://teqitez.herokuapp.com/blog" data-layout="button_count" data-size="large" data-mobile-iframe="true">-->
                                 <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fteqitez.herokuapp.com/blog%2F&amp;src=sdkpreparse">Share</a>
