--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -18,8 +18,10 @@
                         <a class="btn btn-dark" href="{% url 'blog:post-delete' posts.id %}">delete</a>
                         <a class="btn btn-light" href="{% url 'blog:post-update' posts.id %}">edit</a>
                     {% else %}
-                        <div class="d-inline">
-                            <a class="twitter-share-button" data-size="large" href="https://teqitez.herokuapp.com/blog">Tweet</a>
+                        <div class="twitter-share-button" data-href="{% url 'blog:detail' %}" data-layout="button_count" data-size="large" data-mobile-iframe="true">
+                            <a target="_blank" href="http://twitter.com/share?url={% url 'blog:detail' posts.id %}&amp;text='hi'" title="title">
+                                Tweet
+                            </a>
                         </div>
 
                         {% with "shere this" as share_txt %}
@@ -27,17 +29,24 @@
                             {% with "blog/1/" as page_url%}
                                 {% with "title" as title %}
                                     {% with "twitter" as service %}
+                                        <div class="d-inline">
                                         <a class="btn btn-primary" href="http://twitter.com/share?url={{ host }}{{ page_url }}&amp;text={{ title }}" target="_blank" title="{{ share_txt }} {{ service }}">
-                                            <i class="fa fa-twitter-square fa-3x"></i> tweet
+                                            <i class="fa fa-twitter-square"></i> Tweet
                                         </a>
+                                        </div>
                                     {% endwith%}
+                                    {% with "facebook" as service %}
+                                        <a href="http://www.facebook.com/share.php?u={{ host }}{{ page_url }}&amp;t={{ title }}" target="_blank" title="{{ share_txt }} {{ service }}">
+                                            <i class="fa fa-facebook-square"></i> Share
+                                        </a>
+                                    {% endwith %}
                                 {% endwith%}
                             {% endwith%}
                         {% endwith%}
                         {% endwith%}
 
                         <div class="d-inline">
-                            <div class="fb-share-button" data-href="https://teqitez.herokuapp.com/blog" data-layout="button_count" data-size="large" data-mobile-iframe="true">-->
+                            <div class="fb-share-button" data-href="{% url 'blog:detail' posts.id %}" data-layout="button_count" data-size="large" data-mobile-iframe="true">
                                 <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fteqitez.herokuapp.com/blog%2F&amp;src=sdkpreparse">Share</a>
                             </div>
                         </div>
