--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -7,13 +7,23 @@ body {
 #footer {
     position: absolute;
     text-align: center;
-}
-
-.footer {
-    position: absolute;
-    text-align: center;
+    bottom: 0;
 }
 
 .landing {
     padding: 0 1.5rem;
+}
+
+.post_info {
+    text-align: left;
+    color: #2e3133;
+}
+
+.post_title {
+    text-align: left;
+}
+
+.post {
+    border-radius: 10px;
+
 }
