--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -2,16 +2,16 @@
 
 {% block body %}
     <br><br>
-    <div class="container">
-        <h1 class="text-light">{{ blogpost.post_title}}</h1>
+    <div class="container post-container">
+        <h1 class="text-light post_title">{{ blogpost.post_title}}</h1>
         <div class="bg-white">
-            <img src="{{ blogpost.feature_image.url }}" class="img-fluid">
+            <img src="{{ blogpost.feature_image.url }}" class="post_img">
             <p class="text-dark">{{ blogpost.content }}</p>
             <hr>
                 <a class="btn btn-primary" href="{% url 'blog:add_comment_to_post' pk=blogpost.pk %}">Add comment</a>
                 {% for comment in blogpost.comments.all %}
                     {% if user.is_authenticated or comment.approved_comment %}
-                        <div class="comment">
+                        <div class="comment-container">
                             <div class="date">
                                 {{ comment.created_date }}
                                 {% if not comment.approved_comment %}
@@ -19,12 +19,13 @@
                                     <a class="btn btn-default" href="{% url 'blog:comment_approve' pk=comment.pk %}"><span class="glyphicon glyphicon-ok">ok</span></a>
                                 {% endif %}
                             </div>
-                            <span class="text-info">{{ comment.author }}</span>
-                            <p>{{ comment.text|linebreaks }}</p>
+
+                            <p class="comment-content">"{{ comment.text }}"</p> - <span class="text-success comment-author">{{ comment.name|linebreaks }}</span>
                         </div>
+                        <br>
                     {% endif %}
                 {% empty %}
-                    <p>No comments here yet :(</p>
+                    <p>No comments here yet</p>
                 {% endfor %}
         </div>
         <br>
