improve detail.html index.html comment section

--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -14,30 +14,33 @@ body {
     padding: 0 1.5rem;
 }
 
+
+
+/* comment */
+.comment-container {
+    width: 80%;
+    border-radius: 5px;
+    background-color: aliceblue;
+    margin: 10px 10px 10px 10px;
+}
+
+.comment-content {
+    margin: 20px 20px 20px 20px;
+}
+
+.comment-author {
+    color: #16181b;
+}
+/* */
+
+
+/* post */
 .post_title {
     text-align: left;
 }
 
 .post {
     border-radius: 10px;
-
-}
-
-.comment-container {
-    width: 100%;
-    border-radius: 5px;
-    background-color: #868e96;
-}
-
-.comment-content {
-    left: 20px;
-    right: 20px;
-    top: 20px;
-    bottom: 20px;
-}
-
-.comment-author {
-    color: #343a40;
 }
 
 .post-container {
@@ -45,5 +48,7 @@ body {
 }
 
 .post_img {
-    align-self: center;
+    display: block;
+    margin: auto;
+    width: 80%;
 }
