--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -20,7 +20,7 @@
                                 {% endif %}
                             </div>
 
-                            <p class="comment-content">"{{ comment.text }}"</p> - <span class="text-success comment-author">{{ comment.name|linebreaks }}</span>
+                            <p class="comment-content">"{{ comment.text }}"</p> - <span class="text-success comment-author">{{ comment.name }}</span>
                         </div>
                         <br>
                     {% endif %}
@@ -30,8 +30,8 @@
         </div>
         <br>
 
-    </div>
-
+    </div><br><br>
+    <div class="footer">Copyright &copy; Tuan Doan, all rights served</div>
 
 
 {% endblock %}
