--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -57,9 +57,10 @@
                 </div>
                 <br><br>
             {% endfor %}
-            <div class="footer">Copyright &copy; Tuan Doan, all rights served</div>
+
     {% else %}
         <h1>You haven't post anything!</h1>
     {% endif %}
+        <div class="footer container align-self-center">Copyright &copy; Tuan Doan, all rights served</div>
     {% endblock %}
 </div>
