--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -4,7 +4,7 @@
     <br><br>
     <div class="container post-container">
         <h1 class="text-light post_title">{{ blogpost.post_title}}</h1>
-        <div class="bg-white">
+        <div class="bg-white post-container">
             <img src="{{ blogpost.feature_image.url }}" class="post_img">
             <p class="text-dark">{{ blogpost.content }}</p>
             <hr>
