--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -25,7 +25,7 @@
                             {% with "https://teqitez.herokuapp.com/" as host %}
                                     {% with "title" as title %}
                                         {% with "twitter" as service %}
-                                            <div class="d-inline">
+                                            <div class="d-inline text-light">
                                                 <a class="btn btn-primary"
                                                    href="http://twitter.com/share?url={{ host }}{% url 'blog:detail' posts.id %}&amp;text={{ title }}"
                                                    target="_blank"
@@ -36,7 +36,7 @@
                                         {% endwith%}
 
                                         {% with "facebook" as service %}
-                                            <div class="d-inline">
+                                            <div class="d-inline text-light">
                                                 <a class="btn btn-primary"
                                                    href="http://www.facebook.com/share.php?u={{ host }}{% url 'blog:detail' posts.id %}&amp;t={{ title }}"
                                                    target="_blank"
