--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -14,7 +14,7 @@
                     </div>
                     <br><br>
                     <a href="{% url 'blog:detail' posts.id %}"><img src="{{ posts.feature_image.url }}" class="post_img"><br><br></a>
-                        <h5>{{ posts.hooker }} <a href="{% url 'blog:detail' posts.id %}" class="text-info">Read</a></h5>
+                        <h5>{{ posts.hooker }} <a href="{% url 'blog:detail' posts.id %}" class="text-success">Read</a></h5>
                     <br>
                     {% if user.is_authenticated %}
                         <a class="btn btn-dark" href="{% url 'blog:post-delete' posts.id %}">delete</a>
@@ -49,8 +49,8 @@
                             {% endwith%}
                         {% endwith%}
 
-                        <div>
-                            <a href="{% url 'blog:detail' pk=posts.id %}">Comments: {{ posts.approved_comments.count }}</a>
+                        <div class="container text-info" >
+                            Comments {{ posts.approved_comments.count }}
                         </div>
                     {% endif %}
                     <br><br>
