--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -5,7 +5,7 @@
     <div class="container post-container">
         <h1 class="text-light post_title">{{ blogpost.post_title}}</h1>
         <div class="bg-white post-container">
-            <img src="{{ blogpost.feature_image.url }}" class="post_img">
+            <img src="{{ blogpost.feature_image.url }}" class="post-img">
             <p class="text-dark post-text">{{ blogpost.content }}</p>
             <hr>
                 <a class="btn btn-primary addcomment" href="{% url 'blog:add_comment_to_post' pk=blogpost.pk %}">Add comment</a>
@@ -20,8 +20,8 @@
                             </div>
 
                             <p class="comment-content">"{{ comment.text }}"</p>
-                            <span class="text-success comment-author">{{ comment.name }}</span>
-                            <span class="comment-date">{{ comment.created_date }}</span>
+                            <span class="text-success comment-author">{{ comment.name }} </span>
+                            <span class="comment-date"> at {{ comment.created_date }}</span>
                         </div>
                         <br>
                     {% endif %}
