--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -32,7 +32,7 @@
         <br>
 
     </div><br><br>
-    <div class="footer">Copyright &copy; Tuan Doan, all rights served</div>
+    <div class="footer container align-self-center">Copyright &copy; Tuan Doan, all rights served</div>
 
 
 {% endblock %}
